# CerwAgents

./: .gitignore  L6_collaboration_financial_analysis.ipynb  README.md  customer.md  customer_outreach.md  fake_resume.txt  marketing_report.md  multi_agent_output.md  pyproject.toml  tailored_resume.md  venue_details.json
basic-Agents/: README.md  blog_post.md  customer_outreach.md  interview_materials.md
basic-Agents/src/course/: customer.py  customer_outreach.py  finicial.py  job.py  multi_agent.py
content_creater/: .gitignore  README.md  content_output.md  pyproject.toml
content_creater/knowledge/: user_preference.txt
content_creater/src/content_creater/: app.py  main.py
data_analysis/: README.md  pyproject.toml  support_ticket_report.md
data_analysis/src/data_analysis/: main.py
snake_demo/: README.md  generated_game.py  pyproject.toml
snake_demo/src/snake_demo/: crew.py  main.py
snake_demo/src/snake_demo/config/: agents.yaml  tasks.yaml
src/course/: crew.py  event_planner.py  main.py  multi_agent.py  research.py
